Make sure deleted messages are within the limit
(cherry picked from commit 5a06e7ca1b96841cd36a26194641c69e126b9b85)